fix: banner and common usages

--- a/src/contents/projects/bjut-helper.mdx
+++ b/src/contents/projects/bjut-helper.mdx
@@ -2,14 +2,14 @@
 title: 'BJUT-Helper'
 description: '全称为：北京工业大学课程资源共享计划'
 publishedAt: '2022-12-21'
-techs: 'swift'
-banner: 'https://cdn.bjutswift.cn/https://raw.githubusercontent.com/bjut-swift/BJUT-Helper/refs/heads/master/images/title.png'
+techs: 'git,markdown'
+banner: 'https://cdn.bjutswift.cn/https://raw.githubusercontent.com/bjut-swift/swift-image-hosting/main/swift-nest/projects/swift-logo.png'
 tags: 'program'
 ---
 
 # BJUT-Helper
 
-<NextImage
+<Image
   src='https://cdn.bjutswift.cn/https://raw.githubusercontent.com/bjut-swift/BJUT-Helper/refs/heads/master/images/title.png'
   alt='右侧示例图片'
   width={800}
@@ -74,7 +74,7 @@ Issue、PR、纠错、资料、选课/考试攻略，完全欢迎！
 
 ### c. 下载全部文件
 
-<NextImage
+<Image
   src='https://cdn.bjutswift.cn/https://raw.githubusercontent.com/bjut-swift/swift-image-hosting/main/swift-nest/post/bjuthelp.jpg'
   alt='右侧示例图片'
   width={500}
