--- a/src/contents/projects/bjut-ppt-temple.mdx
+++ b/src/contents/projects/bjut-ppt-temple.mdx
@@ -2,7 +2,7 @@
 title: 'BJUT-PPT-template'
 description: '全称为：北京工业大学课程资源共享计划'
 publishedAt: '2022-12-21'
-techs: 'swift'
+techs: 'powerpoint'
 banner: 'https://cdn.bjutswift.cn/https://raw.githubusercontent.com/bjut-swift/BJUT-PPT-template/master/Support/16-9.png'
 tags: 'program'
 ---
@@ -19,7 +19,7 @@ tags: 'program'
 
 也可以直接双击直接**新建**基于模版的幻灯片。
 
-<NextImage
+<Image
   src='https://cdn.bjutswift.cn/https://github.com/bjut-swift/BJUT-PPT-template/blob/master/Support/switch.png'
   alt='右侧示例图片'
   width={800}
@@ -31,7 +31,7 @@ tags: 'program'
 
 ## 16:9 模板预览 🐬
 
-<NextImage
+<Image
   src='https://cdn.bjutswift.cn/https://raw.githubusercontent.com/bjut-swift/BJUT-PPT-template/master/Support/16-9.png'
   alt='右侧示例图片'
   width={800}
@@ -40,7 +40,7 @@ tags: 'program'
   className='my-4 w-full rounded-lg shadow-lg'
 />
 ## 4:3模板预览 🐬
-<NextImage
+<Image
   src='https://cdn.bjutswift.cn/https://raw.githubusercontent.com/bjut-swift/BJUT-PPT-template/master/Support/4-3.png'
   alt='右侧示例图片'
   width={800}
