blog: 添加工作实习要求&内推码收集

--- a/src/contents/blog/2025-intern-interview.mdx
+++ b/src/contents/blog/2025-intern-interview.mdx
@@ -204,3 +204,21 @@ Kelvin 提出了一个简历撰写的黄金法则："简历上写的每一个技
 
 > **Jesse**: “最后，给其它同学的三句建议？”  
 > **Kelvin**: “第一，多关注社区新闻，跟上技术变化。第二，项目尽量做到可展示，别半途而废。第三，反复练习核心技能，像快排这样，熟练最关键。”
+
+## 资源附录
+
+### 工作实习要求
+
+> 注意：本文档的信息时效性有待考证，欢迎在校生随时更新
+
+<FeishuDocEmbed
+  docUrl={'https://zcneg5u9ippj.feishu.cn/wiki/TeDIwXjCOiTql0kvf0UcrwksnNb'}
+/>
+
+### 校友内推
+
+> 感谢大佬们的贡献，共建校友互助氛围！
+
+<FeishuDocEmbed
+  docUrl={'https://fafmkoqaxys.feishu.cn/sheets/VslJsDVuShRmr8t4UsAcaSuBnVc'}
+/>
