--- a/src/contents/blog/2024-cs50x.mdx
+++ b/src/contents/blog/2024-cs50x.mdx
@@ -4,7 +4,7 @@ publishedAt: '2024-09-23'
 description: '24 年秋，我们组织了 CS50x 组队学习，依托哈佛经典课程，享受一站式资源，围绕该课程组织学习小组，提供资源整合与进度规划，面相零基础至进阶的计算机领域学习者参与。'
 englishOnly: 'no'
 banner: 'https://cdn.bjutswift.cn/https://raw.githubusercontent.com/bjut-swift/swift-image-hosting/main/swift-nest/blog/2024-cs50x/cs50x%20banner.jpg'
-tags: 'program,activity'
+tags: '编程 , 教学活动'
 ---
 
 你是否渴望系统学习编程，却苦恼于独自摸索的艰辛？是否期待与志同道合者携手共进，在编程世界中相互激励、共同成长？为此我们举办了 ——**CS50x 组队学习**活动！
