--- a/src/contents/blog/2025-intern-interview.mdx
+++ b/src/contents/blog/2025-intern-interview.mdx
@@ -5,7 +5,7 @@ publishedAt: '2025-03-20'
 lastUpdated: '2025-03-20'
 englishOnly: 'no'
 banner: 'https://cdn.bjutswift.cn/https://raw.githubusercontent.com/bjut-swift/swift-image-hosting/main/swift-nest/blog/2025-intern-interview/bjut-intern.jpg'
-tags: 'internship,interview'
+tags: '工作实习 , 访谈'
 ---
 
 <InterviewHeader
